@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.7 1998/03/31 21:02:12 mj Exp $
+# $Id: Makefile,v 1.8 1998/04/19 11:02:25 mj Exp $
 # Makefile for Linux PCI Utilities
 # (c) 1998 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
 
@@ -10,28 +10,24 @@ CFLAGS=$(OPT) -Wall -W -Wno-parentheses -Wstrict-prototypes -Wno-unused -Werror 
 PREFIX=/
 MANPREFIX=/usr
 
-all: lspci
-
-#all: lspci setpci
+all: lspci setpci
 
 lspci: lspci.o names.o filter.o
+setpci: setpci.o filter.o
 
 lspci.o: lspci.c pciutils.h
 names.o: names.c pciutils.h
 filter.o: filter.c pciutils.h
-
-setpci: setpci.o filter.o
-
-setpci.o: setpci.c
+setpci.o: setpci.c pciutils.h
 
 clean:
 	rm -f `find . -name "*~" -or -name "*.[oa]" -or -name "\#*\#" -or -name TAGS -or -name core`
 	rm -f lspci setpci pci.h
 
 install: all
-	install -o root -g root -m 755 -s lspci $(PREFIX)/sbin
+	install -o root -g root -m 755 -s lspci setpci $(PREFIX)/sbin
 	install -o root -g root -m 644 pci.ids $(PREFIX)/etc
-	install -o root -g root -m 644 lspci.8 $(MANPREFIX)/man/man8
+	install -o root -g root -m 644 lspci.8 setpci.8 $(MANPREFIX)/man/man8
 
 dist: clean
 	cp /usr/src/linux/include/linux/pci.h .
