@@ -1,4 +1,4 @@
-.TH lspci 8 "15 February 98" "pciutils-1.02" "Linux PCI Utilities"
+.TH lspci 8 "19 April 98" "pciutils-1.03" "Linux PCI Utilities"
 .IX lspci
 .SH NAME
 lspci \- list all PCI devices
